[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/main-menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/AtarianSystem.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/ui/panel_boltsDetail.png" type="Texture" id=5]
[ext_resource path="res://assets/red.jpg" type="Texture" id=7]
[ext_resource path="res://resources/GoreShader.tres" type="Shader" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0.117647, 0.117647, 0.117647, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 8 )
shader_param/time_scale = 0.179

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="InputEventKey" id=8]
pressed = true
scancode = 16777217

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer"]
margin_left = 302.0
margin_top = 90.0
margin_right = 722.0
margin_bottom = 510.0
rect_min_size = Vector2( 420, 420 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 6
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="CenterContainer/NinePatchRect/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 380.0
margin_bottom = 380.0
custom_styles/tab_fg = SubResource( 4 )
custom_styles/tab_disabled = SubResource( 5 )
custom_styles/tab_bg = SubResource( 6 )
custom_styles/panel = SubResource( 7 )

[node name="Main Menu" type="VBoxContainer" parent="CenterContainer/NinePatchRect/MarginContainer/TabContainer"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 33.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" type="Button" parent="CenterContainer/NinePatchRect/MarginContainer/TabContainer/Main Menu"]
use_parent_material = true
margin_top = 7.0
margin_right = 340.0
margin_bottom = 57.0
rect_min_size = Vector2( 250, 50 )
hint_tooltip = "Exit the game"
size_flags_vertical = 6
shortcut = SubResource( 9 )
text = "Start"
flat = true

[node name="ButtonSave" type="Button" parent="CenterContainer/NinePatchRect/MarginContainer/TabContainer/Main Menu"]
use_parent_material = true
margin_top = 87.0
margin_right = 340.0
margin_bottom = 137.0
rect_min_size = Vector2( 250, 50 )
hint_tooltip = "Exit the game"
size_flags_vertical = 6
shortcut = SubResource( 9 )
text = "Save"
flat = true

[node name="ButtonLoad" type="Button" parent="CenterContainer/NinePatchRect/MarginContainer/TabContainer/Main Menu"]
use_parent_material = true
margin_top = 167.0
margin_right = 340.0
margin_bottom = 217.0
rect_min_size = Vector2( 250, 50 )
hint_tooltip = "Exit the game"
size_flags_vertical = 6
shortcut = SubResource( 9 )
text = "Load"
flat = true

[node name="ButtonExit" type="Button" parent="CenterContainer/NinePatchRect/MarginContainer/TabContainer/Main Menu"]
use_parent_material = true
margin_top = 248.0
margin_right = 340.0
margin_bottom = 298.0
rect_min_size = Vector2( 250, 50 )
hint_tooltip = "Exit the game"
size_flags_vertical = 6
shortcut = SubResource( 9 )
text = "Exit"
flat = true

[node name="Options" type="VBoxContainer" parent="CenterContainer/NinePatchRect/MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 33.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/NinePatchRect/MarginContainer/TabContainer/Main Menu/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/MarginContainer/TabContainer/Main Menu/ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/MarginContainer/TabContainer/Main Menu/ButtonLoad" to="." method="_on_ButtonLoad_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/MarginContainer/TabContainer/Main Menu/ButtonExit" to="." method="_on_ButtonExit_pressed"]
